--- a/style.css
+++ b/style.css
@@ -52,23 +52,31 @@ nav{
 
 }
 
+.projectSection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .project{
     margin-top: 1em;
     margin-bottom: 1em;
-
+    width: 100%;
     text-align: center;
     font-size: 35px;
     font-weight: 900;
     text-transform: uppercase;
     color: #0079C5;
-}
+} 
 
 .projectCard{
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
     background-color: white;
     margin-top: 1em;
     margin-bottom: 1em;
+    max-width: 300px;
 }
+
+
 
 .projectCard p{
     opacity: 0.7;
@@ -112,6 +120,7 @@ nav{
 }
 
 .emailFormSection{
+    max-width: 300px;
     background-color: white;
     padding: 1em;
 }
@@ -135,3 +144,21 @@ nav{
 .emailMsgContainer textarea{
     margin-top: 0.5em;
 }
+
+@media only screen and (min-width: 700px)
+{
+    .projectSection{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+
+   }
+
+   .projectCard{
+       margin-right: 1em;
+   }
+
+}
+
+    
