--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ nav{
 }
 .container{
     padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .banner{
@@ -91,12 +94,14 @@ nav{
 .projectVid{
     display: block;
     width: 100%;
-    background-color: blue;
 }
 .projectCardContent{
     padding: 1em;
 }
 
+.projectCardContent p{
+    line-height: 1.5em;
+}
 .projectCardTitle{
     text-align: center;
     color: #103082;
@@ -131,30 +136,109 @@ nav{
     width: 80px;
 }
 
+
 .emailFormSection{
-    max-width: 300px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: white;
     padding: 1em;
+    margin: 2em;
 }
 
 .emailFormSection h1{
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
+    font-weight: bold;
+    color: #0079C5;
+    font-size: 2em;
+    margin-top: 1em;
 }
 
+
 .emailInputContainer{
-    padding-bottom: 1em;
+    padding-bottom: 1.5em;
     padding-right: 1em;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+
+.centerForm{
+    background: blueviolet;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label{
+
+    margin-bottom: 0.5em;
+    font-size: 14px;
+    color: #3068a1;
+    font-weight: bold;
+}
+
+.emailAlignContainer{
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+    justify-content: center;
 }
 
 .emailInputContainer input{
-    border: 1px solid black;
+
+    /* background: #eaedf3; */
+    border-bottom: 1px solid black;
+    margin-bottom: 1em;
+
+    
+}
+
+.nameInput{
+    width: 150px;
+}
+
+.nameInput, .emailInput, .subjectInput{
+    border: none;
+    padding: 0.5em
+    /* border: 1px solid lightgray; */
+}
+
+.emailInput, .subjectInput{
+    width: 200px;
 }
 
 .emailMsgContainer textarea{
     margin-top: 0.5em;
+    display: block;
+    width: 200px;
+    
+}
+
+
+.btnContainer{
+    display: flex;
+    padding: 1em;
+    justify-content: flex-end;
+}
+
+.btnContainer button{
+    padding: 1em;
+    margin-top: 1em;
+    width: 100px;
+    background: #007be7;;
+    border: none;
+    color: white;
+    border-radius: 5px;
+}
+
+footer{
+    width: 100%;
+    height: 100px;
+    background: #0d0d5d;
 }
 
 @media only screen and (min-width: 700px)
@@ -166,6 +250,30 @@ nav{
         flex-wrap: wrap;
 
    }
+
+   .nameInput{
+       width: 200px;
+   }
+
+   .emailFormSection{
+       width: 500px;
+
+   }
+   .emailFormSection form{
+       width: 100%;
+   }
+
+    .emailInput, .subjectInput{
+        width: 300px;
+    }
+
+    .emailMsgContainer textarea{
+        margin-top: 0.5em;
+        display: block;
+        width: 300px;
+        
+    }
+
 
    .projectCard{
        margin-right: 1em;
