--- a/style.css
+++ b/style.css
@@ -121,8 +121,9 @@ nav{
     border-radius: 5px;
 }
 
-.viewProjectBtn:hover{
+.viewProjectBtn:hover, .btnContainer button:hover{
     background-color: #33aeff;
+
 
 }
 
@@ -144,7 +145,9 @@ nav{
     align-items: center;
     background-color: white;
     padding: 1em;
-    margin: 2em;
+    margin: 0;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .emailFormSection h1{
@@ -154,6 +157,7 @@ nav{
     color: #0079C5;
     font-size: 2em;
     margin-top: 1em;
+    width: 280px;
 }
 
 
@@ -213,7 +217,10 @@ label{
 
 .emailMsgContainer textarea{
     margin-top: 0.5em;
+    border: none;
+    border-bottom: 1px solid black;
     display: block;
+    height: 100px;
     width: 200px;
     
 }
@@ -238,7 +245,7 @@ label{
 footer{
     width: 100%;
     height: 100px;
-    background: #0d0d5d;
+    background: #104fa6;
 }
 
 @media only screen and (min-width: 700px)
