--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ nav{
     margin-top: 1em;
     margin-bottom: 1em;
     max-width: 300px;
+    height: 550px;
 }
 
 
@@ -113,12 +114,20 @@ nav{
     align-items: center;
 }
 
+
+.viewProjectBtn{
+    font-size: 1em;
+}
 .viewProjectBtn, .viewResume{
     background-color: #0070BA;
     border: none; 
     color: white;
-    padding: 1em;
+    padding: 0.5em;
     border-radius: 5px;
+}
+
+.viewResume{
+    padding: 1em;
 }
 
 .viewProjectBtn:hover, .btnContainer button:hover{
@@ -250,6 +259,39 @@ footer{
 
 @media only screen and (min-width: 700px)
 {
+
+    nav{
+        padding: 0;
+        padding-top: 2em;
+        display: flex;
+        justify-content: flex-end;
+
+    }
+
+
+    li{
+        display: inline;
+        padding-right: 1.5em;
+    }
+
+    ul{
+         margin: 0;
+    }
+
+    a{
+        text-decoration: none;
+        color: white;
+        font-size: 1.2em;
+    }
+
+    nav a:hover{
+        color:#bcb2b2;
+    }
+    
+ 
+
+
+
     .projectSection{
         display: flex;
         flex-direction: row;
@@ -285,6 +327,9 @@ footer{
    .projectCard{
        margin-right: 1em;
    }
+
+
+
 
 }
 
