--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ nav{
     margin-bottom: 1em;;
 }
 
-#resumeBtn{
-   width: 130px;
+#resumeNavigation{ 
    margin-bottom: 2em;
    text-transform: uppercase;
    background-color: #007be7;
