fixed footer to the bottom

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ header{
     padding-top: 1em;
     max-width: 900px;
     width: 100%;
+    text-decoration: underline;
 }
 
 .moreProjects a{
@@ -165,15 +166,18 @@ header{
     margin-bottom: 1em;
     max-width: 300px;
     height: 510px;
+    position: relative;
 }
 
 #discountImage{
     padding-top: 0.9em;
     width: 110px;
+    padding-bottom: 15px;
 }
 
 .projectCard p{
     opacity: 0.7;
+    font-size: 0.9em;
 }
 
 .projectCard img{
@@ -187,14 +191,17 @@ header{
 }
 .projectCardContent{
     padding: 1em;
+
 }
 
 .projectCardContent p{
     line-height: 1.5em;
+
 }
 .projectCardTitle{
     text-align: center;
     color: #2492da;
+    margin-bottom: 0;
 
 }
 
@@ -202,12 +209,21 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 0;
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+    right: 1em;
+    height: 50px;
 }
 
 
 .viewProjectLink{
     font-size: 1em;
+
 }
+
+
 .viewProjectLink, .viewResume{
 
     background-color: #33aeff;
@@ -348,6 +364,10 @@ footer{
 
 @media only screen and (min-width: 700px)
 {
+    .projectCardContent p{
+        line-height: 1.6em;
+    
+    }
 
     .banner a{
         padding: 1em;
