testing removing position relative for mobile chrome

--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ footer div{
     justify-content: center;
     align-items: center;
     animation: move 1s linear infinite;
-    position: relative;
+    /* position: relative; */
 }
 
 .goBack:hover{
